--- a/index.html
+++ b/index.html
@@ -362,13 +362,13 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
                     <div class="contact-links">
-                        <a href="mailto:your.email@example.com" class="contact-link">
+                        <a href="mailto:parigawade001@gmail.com" class="contact-link">
                             <i class="fas fa-envelope"></i> Email Me
                         </a>
-                        <a href="https://instagram.com/your-handle" class="contact-link">
+                        <a href="https://instagram.com/theparigawade" class="contact-link">
                             <i class="fab fa-instagram"></i> Instagram
                         </a>
-                        <a href="https://linkedin.com/in/your-profile" class="contact-link">
+                        <a href="https://linkedin.com/in/theparigawade" class="contact-link">
                             <i class="fab fa-linkedin"></i> LinkedIn
                         </a>
                     </div>
