--- a/index.html
+++ b/index.html
@@ -111,7 +111,53 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="portfolio-item">
-                        <img src="images/thumbnail/38.png" alt="Thumbnail 1" class="img-fluid">
+                        <img src="images/thumbnail/100.png" alt="Thumbnail 1" class="img-fluid">
+                    </div>
+                </div>
+               
+                <div class="col-md-4 mb-4">
+                    <div class="portfolio-item">
+                        <img src="images/thumbnail/102.png" alt="Thumbnail 1" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="portfolio-item">
+                        <img src="images/thumbnail/104.png" alt="Thumbnail 1" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="portfolio-item">
+                        <img src="images/thumbnail/105.png" alt="Thumbnail 1" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="portfolio-item">
+                        <img src="images/thumbnail/107.png" alt="Thumbnail 1" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="portfolio-item">
+                        <img src="images/thumbnail/108.png" alt="Thumbnail 1" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="portfolio-item">
+                        <img src="images/thumbnail/110.png" alt="Thumbnail 1" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="portfolio-item">
+                        <img src="images/thumbnail/111.png" alt="Thumbnail 1" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="portfolio-item">
+                        <img src="images/thumbnail/101.png" alt="Thumbnail 1" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="portfolio-item">
+                        <img src="images/thumbnail/115.png" alt="Thumbnail 1" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
@@ -380,4 +426,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
+</html>
 </html>
